--- a/index.html
+++ b/index.html
@@ -7,20 +7,16 @@
 </head>
 <body>
   <main>
-    <h1 id="title">Doping in Professional Bicycle Racing</h1>
-    <h2>35 Fastest times up Alpe d'Huez</h2>
+    <h1 id="title">United States Educational Attainment</h1>
+    <h2 id="description">Percentage of adults age 25 and older with a bachelor's degree or higher (2010-2014)</h2>
 
-    <div id="container">
-      <ul id="legend">
-        <li>No doping alegations</li>
-        <li>Riders with doping alegations</li>
-      </ul>
-    </div>
+    <div id="container"></div>
 
     <div id="tooltip"></div>
   </main>
 
   <script src="https://d3js.org/d3.v7.min.js"></script>
+  <script src="https://unpkg.com/topojson@3"></script>
   <script src="./index.js" defer></script>
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js" defer></script>
 </body>
