--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h2 id="description">Percentage of adults age 25 and older with a bachelor's degree or higher (2010-2014)</h2>
 
     <div id="container"></div>
+    <div id="legend"></div>
 
     <div id="tooltip"></div>
   </main>
