--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <h1 id="title">United States Educational Attainment</h1>
     <h2 id="description">Percentage of adults age 25 and older with a bachelor's degree or higher (2010-2014)</h2>
 
-    <div id="container"></div>
-    <div id="legend"></div>
-
+    <div id="container">
+      <div id="legend"></div>
+    </div>
+    
     <div id="tooltip"></div>
   </main>
 
