--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 
     <div id="container">
       <div id="legend"></div>
+      <div id="source">Source: <a href="https://www.ers.usda.gov/data-products/county-level-data-sets/download-data.aspx" target="_blank">USDA Economic Research Service</a></div>
     </div>
-    
+
     <div id="tooltip"></div>
   </main>
 
